address contrast issue on visited link in pagination (ACFA-579)

--- a/app/assets/stylesheets/cul-toolkit/cul.scss
+++ b/app/assets/stylesheets/cul-toolkit/cul.scss
@@ -17,7 +17,7 @@ a:visited:not(.btn) {
 }
 .pagination {
   .active {
-    a:link {
+    a:link, a:visited {
       color:var(--bs-pagination-active-color);
     }
   }
